--- a/app/src/main/res/layout/activity_ds.xml
+++ b/app/src/main/res/layout/activity_ds.xml
@@ -71,7 +71,7 @@
                 android:textColor="@color/white"
                 android:background="#F2150E65"
                 android:fontFamily="@font/lora"
-                android:text="Department of CSE(Data Science) Eng."
+                android:text="Department of CSE(Data Science) Engg."
                 android:textSize="18dp"
                 android:gravity="center"
                 android:layout_marginBottom="7dp">
