--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -590,7 +590,7 @@ Highest Placement in the region">
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:fontFamily="@font/lora"
-                    android:text="Hon. Dr. Sanjay D. Patil"
+                    android:text="Hon'ble Dr. Sanjay D. Patil"
                     android:textColor="@color/nevi_1"
                     android:textStyle="bold"
                     android:textSize="18dp">
@@ -656,7 +656,7 @@ Highest Placement in the region">
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:fontFamily="@font/lora"
-                    android:text="Hon. Mr. Satej D. Patil"
+                    android:text="Hon'ble Mr. Satej D. Patil"
                     android:textColor="@color/nevi_1"
                     android:textStyle="bold"
                     android:textSize="18dp">
@@ -722,7 +722,7 @@ Highest Placement in the region">
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:fontFamily="@font/lora"
-                    android:text="Hon. Shri. Ruturaj S. Patil"
+                    android:text="Hon'ble Shri. Ruturaj S. Patil"
                     android:textColor="@color/nevi_1"
                     android:textStyle="bold"
                     android:textSize="18dp">
@@ -788,7 +788,7 @@ Highest Placement in the region">
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:fontFamily="@font/lora"
-                    android:text="Hon. Shri. Pruthviraj S. Patil"
+                    android:text="Hon'ble Shri. Pruthviraj S. Patil"
                     android:textColor="@color/nevi_1"
                     android:textStyle="bold"
                     android:textSize="18dp">
@@ -813,7 +813,7 @@ Highest Placement in the region">
                     android:textAlignment="center"
                     android:background="#0F018786"
                     android:fontFamily="@font/lora"
-                    android:text="'At DYPCET, we take care of the physical and intellectual needs of the students with a well qualified and dedicated team of faculty members.'"
+                    android:text="'Education is the passport to the future, tomorrow belongs to those who prepare for it today.'"
                     android:textColor="@color/black"
                     android:textSize="13dp">
                 </TextView>
